# google-authenticator-rust

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml
.github/workflows/: release.yml
src/: authenticator.h  authenticator.rs  google_authenticator.rs  lib.rs
