[package]
name = "google-authenticator"
version = "0.1.9"
authors = ["hans <hans@hansk.org>"]
repository = "https://github.com/hanskorg/google-authenticator-rust.git"
homepage = "https://github.com/hanskorg/google-authenticator-rust.git"
license = "MIT"
readme = "README.md"
description = "This Rust crate can be used to interact with the Google Authenticator mobile app for 2-factor-authentication."
keywords = ["GoogleAuthenticator"]
categories = ["cryptography"]


[dependencies]
rand = "0.7.3"
base32 = "0.4.0"
hmac-sha1 = "0.1.3"
urlencoding = "1.0.0"
qrcode = {version  = "0.12.0",optional = true}
lazy_static = "1.4.0"

[features]
default = []
with-qrcode = ["qrcode"]