[package]
name = "google-authenticator"
version = "0.2.0"
authors = ["hans <hans@hansk.org>"]
repository = "https://github.com/hanskorg/google-authenticator-rust.git"
homepage = "https://github.com/hanskorg/google-authenticator-rust.git"
license = "MIT"
readme = "README.md"
description = "This Rust crate can be used to interact with the Google Authenticator mobile app for 2-factor-authentication."
keywords = ["GoogleAuthenticator"]
categories = ["cryptography"]
edition = "2018"

[lib]
name="authenticator"
crate-type = ["staticlib", "cdylib"]
#path = "src/lib.rs"
required-features = ["with-qrcode"]

[dependencies]
rand = "0.8.5"
base32 = "0.4.0"
hmac-sha1 = "0.1.3"
percent-encoding = "2"
qrcode = { version  = "0.12.0", optional = true }
lazy_static = "1.4.0"
libc = "0.2.0"

[dev-dependencies]
ureq = "2.6.1"

[features]
default = ["qrcode"]
with-qrcode = ["qrcode"]
