[package]
name = "google-authenticator"
version = "0.4.1"
authors = ["hans <hans@hansk.org>"]
repository = "https://github.com/hanskorg/google-authenticator-rust.git"
homepage = "https://github.com/hanskorg/google-authenticator-rust.git"
license = "MIT"
readme = "README.md"
description = "This Rust crate can be used to interact with the Google Authenticator mobile app for 2-factor-authentication."
keywords = ["google authenticator","totp","otp","2fa","hotp"]
categories = ["authentication","algorithms"]
edition = "2021"

[lib]
name="authenticator"
crate-type = ["staticlib", "cdylib"]
#path = "src/lib.rs"
#required-features = ["with-qrcode","clib"]

[dependencies]
rand = "0.8.5"
base32 = "0.4.0"
hmac-sha1 = "0.1.3"
percent-encoding = "2"
qrcode = { version  = "0.12.0", optional = true }
lazy_static = "1.4.0"
libc = "0.2.0"

[target.i686-pc-windows-msvc.dependencies]
vc-ltl = "5.0.5"

[target.x86_64-pc-windows-msvc.dependencies]
vc-ltl = "5.0.5"

[target.aarch64-pc-windows-msvc.dependencies]
vc-ltl = "5.0.5"

[dev-dependencies]
ureq = "2.6.1"

[features]
default = ["qrcode"]
with-qrcode = ["qrcode"]
clib = []
